Add new function mvnoption: to set value of MAVEN_OPTS
git-svn-id: https://svn.exoplatform.org/projects/tools/trunk@80230 42d3c691-033b-0410-95b4-af486b8189e5